--- a/Intendencia/WebContent/template.xhtml
+++ b/Intendencia/WebContent/template.xhtml
@@ -17,16 +17,6 @@
 
         <p:layout fullPage="true">
             <p:layoutUnit position="north" size="65" header="IMM">
-                <!--               <h:form id="menuForm">
-                                   <p:menubar>
-                                       <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
-                                       <p:submenu label="#{bundle.Maintenance}">
-                                           <p:menuitem value="Inquilino" outcome="/TablasBasicas/inquilino/List.xhtml" />
-                                           <p:menuitem value="Propiedad" outcome="/TablasBasicas/propiedad/List.xhtml" />
-                                           <p:menuitem value="Propietario" outcome="/TablasBasicas/propietario/List.xhtml" />
-                                       </p:submenu>
-                                   </p:menubar>
-                               </h:form>-->
             </p:layoutUnit>
 
             <p:layoutUnit position="west" size="175" header="" collapsible="true">
@@ -41,9 +31,9 @@
                 </h:form>
             </p:layoutUnit>
 
-            <p:layoutUnit position="south" size="60">
-                <ui:insert name="footer"/>
-            </p:layoutUnit>
+<!--             <p:layoutUnit position="south" size="60"> -->
+<!--                 <ui:insert name="footer"/> -->
+<!--             </p:layoutUnit> -->
 
             <p:layoutUnit position="center">
                 <ui:insert name="body"/>
