--- a/AgenciaCobranza/WebContent/Login/Login.html
+++ b/AgenciaCobranza/WebContent/Login/Login.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css"
-	href="/TallerJavaWeb2016/Estilo.css">
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
+
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+		<title>Video Club!!!!</title>
+		<link rel="stylesheet" type="text/css" href="/AgenciaCobranza/recursos_estaticos/estilos/estilos.css" media="all">
+	</head>
+
+
 <body>
-	<form action="/TallerJavaWeb2016/ServletLogin" method="post">
-		<table style="width: 0%; margin-left: auto; margin-right: auto; border-radius: 12px;padding: 15px 25px;">
-			<tr>
-				<td>Usuario:</td>
-				<td><input type="text" name="usuario"></td>
-			</tr>
-			<tr>
-				<td>Contraseña:</td>
-				<td><input type="password" name="pass"></td>
-			</tr>
-			<tr>
-				<td colspan="2"><input type="submit" value="Login"></td>
-			</tr>
-	</form>
+
+
+	<div class="cabezal">	
+	</div>
+
+	<div class="cuerpo">
+		<div class="contenedor login">
+	
+		 
+		    <form action="/AgenciaCobranza/ServletLogin" method="post">
+					<div class="linea_formulario">
+						<label for="usuario" class="campo_obligatorio">Usuario</label>
+					    <input id="usuario" type="text" name="usuario" required="required" size="30">	  
+					</div>
+					<div class="linea_formulario">
+						<label for="pass" class="campo_obligatorio">Contraseña</label>
+					    <input id="pass" type="password" name="pass" required="required" size="30">
+					</div>
+					<div class="linea_formulario">
+						<input type="submit" value="Login">
+					</div>
+				</form>
+			
+		</div>
+	</div>
+	
+	<div class="pie_pagina">
+		<label class="copyright">Copyright © 2016 | <a href="mailto:patricia.bevilacqua@cursoanteljee.com">Curso Antel JEE - Patricia Bevilacqua</ a></label>
+	</div>
+	
 </body>
 </html>
