Mensaje de Login para el socket y ajustes varios

--- a/AgenciaCobranza/WebContent/Login/Login.html
+++ b/AgenciaCobranza/WebContent/Login/Login.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-		<title>Video Club!!!!</title>
+		<title>Agencia de Cobranza</title>
 		<link rel="stylesheet" type="text/css" href="/AgenciaCobranza/recursos_estaticos/estilos/estilos.css" media="all">
 	</head>
 
@@ -36,7 +36,7 @@
 	</div>
 	
 	<div class="pie_pagina">
-		<label class="copyright">Copyright © 2016 | <a href="mailto:patricia.bevilacqua@cursoanteljee.com">Curso Antel JEE - Patricia Bevilacqua</ a></label>
+		<label class="copyright">Copyright © 2016 | Curso Antel JEE - Patricia Bevilacqua - Gonzalo Martinez</ a></label>
 	</div>
 	
 </body>
